// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header Component > abnormal: loading state > abnormal: should match snapshot when loading 1`] = `
<div>
  <header
    class="_header_f4f7a7"
  >
    <div
      class="_brand_f4f7a7"
    >
      <svg
        class="_logo_f4f7a7"
        fill="none"
        height="28"
        viewBox="0 0 24 24"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M7 8h10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
        <path
          d="M12 12v4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <h1
        class="_title_f4f7a7"
      >
        Tab Maestro
      </h1>
      <span
        class="_badge_f4f7a7"
      >
        2
      </span>
    </div>
    <div
      class="_container_431a15"
    >
      <svg
        class="_icon_431a15"
        fill="none"
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
          stroke="currentColor"
          stroke-width="2"
        />
        <path
          d="M21 21l-4.35-4.35"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <input
        class="_input_431a15"
        placeholder="Search tabs..."
        type="text"
        value=""
      />
    </div>
    <div
      class="_actions_f4f7a7"
    >
      <button
        class="_buttonSecondary_f4f7a7"
        disabled=""
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="20"
            x="2"
            y="3"
          />
          <path
            d="M8 21h8"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 17v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        Save All Tabs
      </button>
      <button
        class="_buttonDanger_f4f7a7"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
        >
          <polyline
            points="3,6 5,6 21,6"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear All Tabs
      </button>
      <div
        class="_container_d23c62"
      >
        <button
          aria-expanded="false"
          aria-label="Theme settings"
          class="_trigger_d23c62"
        >
          <span
            class="_icon_d23c62"
          >
            🌙
          </span>
          <span
            class="_label_d23c62"
          >
            Dark
          </span>
          <span
            class="_arrow_d23c62 "
          >
            ▼
          </span>
        </button>
      </div>
      <div
        class="_container_2ae9bc"
      >
        <button
          aria-expanded="false"
          aria-label="Language settings"
          class="_trigger_2ae9bc"
        >
          <span
            class="_icon_2ae9bc"
          >
            🌐
          </span>
          <span
            class="_label_2ae9bc"
          >
            EN
          </span>
          <span
            class="_arrow_2ae9bc "
          >
            ▼
          </span>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header Component > edge: empty state > edge: should match snapshot without tabs 1`] = `
<div>
  <header
    class="_header_f4f7a7"
  >
    <div
      class="_brand_f4f7a7"
    >
      <svg
        class="_logo_f4f7a7"
        fill="none"
        height="28"
        viewBox="0 0 24 24"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M7 8h10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
        <path
          d="M12 12v4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <h1
        class="_title_f4f7a7"
      >
        Tab Maestro
      </h1>
    </div>
    <div
      class="_container_431a15"
    >
      <svg
        class="_icon_431a15"
        fill="none"
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
          stroke="currentColor"
          stroke-width="2"
        />
        <path
          d="M21 21l-4.35-4.35"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <input
        class="_input_431a15"
        placeholder="Search tabs..."
        type="text"
        value=""
      />
    </div>
    <div
      class="_actions_f4f7a7"
    >
      <button
        class="_buttonSecondary_f4f7a7"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="20"
            x="2"
            y="3"
          />
          <path
            d="M8 21h8"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 17v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        Save All Tabs
      </button>
      <div
        class="_container_d23c62"
      >
        <button
          aria-expanded="false"
          aria-label="Theme settings"
          class="_trigger_d23c62"
        >
          <span
            class="_icon_d23c62"
          >
            🌙
          </span>
          <span
            class="_label_d23c62"
          >
            Dark
          </span>
          <span
            class="_arrow_d23c62 "
          >
            ▼
          </span>
        </button>
      </div>
      <div
        class="_container_2ae9bc"
      >
        <button
          aria-expanded="false"
          aria-label="Language settings"
          class="_trigger_2ae9bc"
        >
          <span
            class="_icon_2ae9bc"
          >
            🌐
          </span>
          <span
            class="_label_2ae9bc"
          >
            EN
          </span>
          <span
            class="_arrow_2ae9bc "
          >
            ▼
          </span>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header Component > normal: rendering with tabs > normal: should match snapshot with tabs 1`] = `
<div>
  <header
    class="_header_f4f7a7"
  >
    <div
      class="_brand_f4f7a7"
    >
      <svg
        class="_logo_f4f7a7"
        fill="none"
        height="28"
        viewBox="0 0 24 24"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M7 8h10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
        <path
          d="M12 12v4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <h1
        class="_title_f4f7a7"
      >
        Tab Maestro
      </h1>
      <span
        class="_badge_f4f7a7"
      >
        3
      </span>
    </div>
    <div
      class="_container_431a15"
    >
      <svg
        class="_icon_431a15"
        fill="none"
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
          stroke="currentColor"
          stroke-width="2"
        />
        <path
          d="M21 21l-4.35-4.35"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <input
        class="_input_431a15"
        placeholder="Search tabs..."
        type="text"
        value=""
      />
    </div>
    <div
      class="_actions_f4f7a7"
    >
      <button
        class="_buttonSecondary_f4f7a7"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="20"
            x="2"
            y="3"
          />
          <path
            d="M8 21h8"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 17v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        Save All Tabs
      </button>
      <button
        class="_buttonDanger_f4f7a7"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
        >
          <polyline
            points="3,6 5,6 21,6"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear All Tabs
      </button>
      <div
        class="_container_d23c62"
      >
        <button
          aria-expanded="false"
          aria-label="Theme settings"
          class="_trigger_d23c62"
        >
          <span
            class="_icon_d23c62"
          >
            🌙
          </span>
          <span
            class="_label_d23c62"
          >
            Dark
          </span>
          <span
            class="_arrow_d23c62 "
          >
            ▼
          </span>
        </button>
      </div>
      <div
        class="_container_2ae9bc"
      >
        <button
          aria-expanded="false"
          aria-label="Language settings"
          class="_trigger_2ae9bc"
        >
          <span
            class="_icon_2ae9bc"
          >
            🌐
          </span>
          <span
            class="_label_2ae9bc"
          >
            EN
          </span>
          <span
            class="_arrow_2ae9bc "
          >
            ▼
          </span>
        </button>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header Component > snapshot tests > should match snapshot with multiple tabs 1`] = `
<div>
  <header
    class="_header_f4f7a7"
  >
    <div
      class="_brand_f4f7a7"
    >
      <svg
        class="_logo_f4f7a7"
        fill="none"
        height="28"
        viewBox="0 0 24 24"
        width="28"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          stroke="currentColor"
          stroke-width="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M7 8h10"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
        <path
          d="M12 12v4"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <h1
        class="_title_f4f7a7"
      >
        Tab Maestro
      </h1>
      <span
        class="_badge_f4f7a7"
      >
        10
      </span>
    </div>
    <div
      class="_container_431a15"
    >
      <svg
        class="_icon_431a15"
        fill="none"
        height="16"
        viewBox="0 0 24 24"
        width="16"
      >
        <circle
          cx="11"
          cy="11"
          r="8"
          stroke="currentColor"
          stroke-width="2"
        />
        <path
          d="M21 21l-4.35-4.35"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
        />
      </svg>
      <input
        class="_input_431a15"
        placeholder="Search tabs..."
        type="text"
        value=""
      />
    </div>
    <div
      class="_actions_f4f7a7"
    >
      <button
        class="_buttonSecondary_f4f7a7"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
        >
          <rect
            height="14"
            rx="2"
            stroke="currentColor"
            stroke-width="2"
            width="20"
            x="2"
            y="3"
          />
          <path
            d="M8 21h8"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            d="M12 17v4"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
        Save All Tabs
      </button>
      <button
        class="_buttonDanger_f4f7a7"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
        >
          <polyline
            points="3,6 5,6 21,6"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <path
            d="M19 6v14a2 2 0 01-2 2H7a2 2 0 01-2-2V6m3 0V4a2 2 0 012-2h4a2 2 0 012 2v2"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear All Tabs
      </button>
      <div
        class="_container_d23c62"
      >
        <button
          aria-expanded="false"
          aria-label="Theme settings"
          class="_trigger_d23c62"
        >
          <span
            class="_icon_d23c62"
          >
            🌙
          </span>
          <span
            class="_label_d23c62"
          >
            Dark
          </span>
          <span
            class="_arrow_d23c62 "
          >
            ▼
          </span>
        </button>
      </div>
      <div
        class="_container_2ae9bc"
      >
        <button
          aria-expanded="false"
          aria-label="Language settings"
          class="_trigger_2ae9bc"
        >
          <span
            class="_icon_2ae9bc"
          >
            🌐
          </span>
          <span
            class="_label_2ae9bc"
          >
            EN
          </span>
          <span
            class="_arrow_2ae9bc "
          >
            ▼
          </span>
        </button>
      </div>
    </div>
  </header>
</div>
`;
